# ha-zoneminder

./: .gitignore  CLAUDE.md  DEV.md  README.md  hacs.json  pyproject.toml  tox.ini
.github/workflows/: qa.yml  release.yml
custom_components/zoneminder/: __init__.py  binary_sensor.py  camera.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  models.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/zoneminder/translations/: en.json
docs/: BREAKING-CHANGES.md  README.md  USAGE.md  architecture.drawio  config-flow.drawio  data-flow.drawio  zoneminder.markdown
scripts/: bump-version.sh
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_camera.py  test_config.py  test_config_flow.py  test_coordinator.py  test_init.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
