[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-zoneminder"
version = "0.1.0"
description = "ZoneMinder custom integration for Home Assistant"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
    "homeassistant",
    "zm-py==0.5.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "ruff",
    "mypy",
    "tox",
    "tox-gh-actions",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "D",      # pydocstyle
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit
    "RUF",    # ruff-specific rules
]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-docstring-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "D100",   # missing docstring in public module
    "D103",   # missing docstring in public function
]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
